--- a/app/src/main/res/layout/activity_msg_detail.xml
+++ b/app/src/main/res/layout/activity_msg_detail.xml
@@ -14,6 +14,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="8dp"
         android:text="Message Detail Page"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvUsername" />
@@ -25,7 +26,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="16dp"
-        android:text="tvSessionTitle"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvMsgDetail" />
@@ -37,7 +38,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="16dp"
-        android:text="TextView"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvSessionTitle" />
@@ -50,6 +51,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="16dp"
         android:text="TextView"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
